switched to mongo db

--- a/webScraping/backend/src/main/resources/application.properties
+++ b/webScraping/backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:h2:./dev db
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=sa
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=123
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=webScraping
+spring.data.mongodb.host=localhost
