getProducts converted to pageable

--- a/webScraping/backend/src/main/resources/application.properties
+++ b/webScraping/backend/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.data.mongodb.password=123
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=webScraping
 spring.data.mongodb.host=localhost
+
+spring.data.web.pageable.max-page-size=16
