switched from h2 to postgresql

--- a/ecommerce/backend/src/main/resources/application.properties
+++ b/ecommerce/backend/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:h2:./dev db
+server.port=8081
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=sa
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.username=postgres
+spring.datasource.password=55
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
