--- a/webScraping/backend/docker-compose.yml
+++ b/webScraping/backend/docker-compose.yml
@@ -1,28 +1,11 @@
-version: "3.8"
+version: '3.1'
+
 services:
-  mongodb:
-    image: mongo
-    container_name: mongodb
-    ports:
-      - "27017:27017"
-    volumes:
-      - data:/data
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=123
-  mongo-express:
-    image: mongo-express
-    container_name: mongo-express
+
+  db:
+    image: postgres
     restart: always
     ports:
-      - "8081:8081"
+      - "5432:5432"
     environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=123
-      - ME_CONFIG_MONGODB_SERVER=mongodb
-volumes:
-  data: { }
-
-networks:
-  default:
-    name: mongodb_network
+      POSTGRES_PASSWORD: 55
