--- a/webScraping/backend/src/main/resources/application.properties
+++ b/webScraping/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=123
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=webScraping
-spring.data.mongodb.host=localhost
-
+server.port=8080
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/webScraping
+spring.datasource.username=postgres
+spring.datasource.password=55
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.data.web.pageable.max-page-size=16
